--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <p class="copyright_text">2023 All Rights Reserved. Design by <a href="#">Team Tuan Tai</a> Distributed By <a href="#">Team Tuan Tai</a></p>
+                  <p class="copyright_text">2023 All Rights Reserved. Design by <a href="#">Team Tuan Tai</a> Distributed By <a href="admin.html">Team Tuan Tai</a></p>
                </div>
             </div>
          </div>
