--- a/product.html
+++ b/product.html
@@ -47,7 +47,7 @@
       const priceElement = document.getElementById("price");
 
       nameElement.textContent = product.name;
-      imageElement.src = `../trator-1.0.0/images/galery/${product.image}`;
+      imageElement.src = `./images/galery/${product.image}`;
       priceElement.textContent = product.price;
     };
 
